Enhance maven-javadoc-plugin config for project jigsaw